fix LiChess Tools header not being visible in Keyboard help https://github.com/Siderite/lichessTools/issues/799

--- a/tools/keyboardHelp/tool.css
+++ b/tools/keyboardHelp/tool.css
@@ -2,7 +2,7 @@ body.lichessTools .lichessTools-title {
   filter: invert(1);
 }
 
-body.lichessTools .lichessTools-title:not(:has(td)) {
+body.lichessTools .lichessTools-title:not(:has(+ tr)) {
   display: none;
 }
 
